add publications to top bar

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ description: Thoughts on AI, Neuroscience, and other things that interest me.
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
+  Publications: "publications"
  # Resources:
  #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
  #   - Learn markdown: "http://www.markdowntutorial.com/"
