--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ social-network-links:
   rss: true
   email: "beren@millidge.name"
   #facebook: deanattali
-  github: Bmillidgework
+  github: BerenMillidge
   #twitter: daattali
 #  reddit: yourname
 #  linkedin: daattali
