--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+#avatar: "/img/avatar-icon.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -72,7 +72,7 @@ social-network-links:
   email: "beren@millidge.name"
   #facebook: deanattali
   github: BerenMillidge
-  #twitter: daattali
+  twitter: BerenMillidge
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
