remove google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ share-links-active:
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-gtag: "UA-180993738-1"
+#gtag: "UA-180993738-1"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
